# fwupd

./: meson.build  meson_options.txt
contrib/: fwupd.spec.in
data/tests/quirks.d/: tests.quirk
libfwupd/: fwupd-enums.c  fwupd-enums.h
plugins/: meson.build
plugins/altos/: fu-altos-device.c
plugins/colorhug/: fu-colorhug-device.c  fu-plugin-colorhug.c
plugins/csr/: fu-csr-device.c
plugins/dfu/: dfu-device.c  fu-plugin-dfu.c
plugins/ebitdo/: fu-ebitdo-device.c  fu-plugin-ebitdo.c
plugins/nvme/: fu-nvme-device.c
plugins/qmi/: fu-plugin-qmi.c  fu-qmi-device.c  fu-qmi-device.h
plugins/rts54xx/: README.md  fu-plugin-rts54xx.c  fu-rts54xx-device.c  fu-rts54xx-device.h  meson.build  rts54xx.quirk
plugins/uefi/: fu-uefi-device.c
plugins/unifying/: lu-device.c
plugins/wacomhid/: fu-wac-device.c
snap/hooks/: install
src/: fu-device-list.c  fu-device.c  fu-device.h  fu-engine.c  fu-plugin.h  fu-quirks.h  fu-self-test.c
